imported chart.min.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Simple, tiny &amp; cute.js</title>
-    <script type="text/javascript" src="chart.js"></script>
+    <script type="text/javascript" src="chart.min.js"></script>
     <style type="text/css">
       body {
         background: #fff url(exclusive_paper.png) 0 0 fixed; /*#DEDFDE;*/
@@ -285,7 +285,7 @@
             [5.5, 5.5],
             [10, 0]
           ];
-      hc.plot(triglavHeader, {type: 'point'});
+      hc.plot(hai);
 
       var _header_down = false,
           last_pos = [],
