--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div id="realstuff">
           <h2>&#9787; Oh noes, not another one!</h2>
           <p>
-            Oh yes! <em>Simple, tiny &amp; cute.js</em> is yet another charting library for JavaScript! Sure, there's already a gazillion of these but with all this horrible news going on, I've really felt that what the world now needs is another charting library. This is my small contribution to the world's legacy.
+            Oh yes! <em>Simple, tiny &amp; cute.js</em> is yet another charting library for JavaScript! Sure, there's already a gazillion of these but with all the horrible news going on, I've really felt that what the world needs right now is another charting library.
           </p>
 
           <h2>&#9787; What's with the name?</h2>
           <p>
             <ul>
-              <li>Simple &mdash; STC knows how do draw only simple charts, has no fancy features like drawing negative values or managing values on the axes (that's all for you to sort it out!)</li>
+              <li>Simple &mdash; STC knows only how to draw simple charts, it has no fancy features like drawing negative values or managing labels on the axes (that's all for you to sort it out!)</li>
               <li>Tiny &mdash; It's only 4 KB of compressed JavaScript code and 8 KB when uncompressed. You can even easily remove the features you don't need to squeeze the file size even more.</li>
               <li>Cute &mdash; Just look at the site. Can't you feel it?</li>
             </ul>
@@ -52,7 +52,7 @@
 
           <h2>&#9787; Licence</h2>
           <p>
-            STC is published under the <abbr title="Muffins+MIT">MMIT</abbr> license. Any violations of the licence will be taken seriously and reported to local authorities.
+            STC is published under the <abbr title="Muffins+MIT">MMIT</abbr> license. Any violations of the licence will be taken seriously and reported to local authorities. The <a href="https://github.com/josip/stc/blob/master/LICENCE">licence file</a> can be found in the Github repository.
           </p>
         </div>
 
