--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             STC was actually built for use with <a href="http://qt.gitorious.org/qt-labs/qmlcanvas">qmlcanvas</a>, a superb piece of code which provides a HTML5 canvas-like API for QML applications. Don't you just love standards?
           </p>
 
-          <h2>&#9787; Licence</h2>
+          <h2>&#9787; License</h2>
           <p>
-            STC is published under the <abbr title="Muffins+MIT">MMIT</abbr> license. Any violations of the licence will be taken seriously and reported to local authorities. The <a href="https://github.com/josip/stc/blob/master/LICENCE">licence file</a> can be found in the Github repository.
+            STC is published under the <abbr title="Muffins+MIT">MMIT</abbr> license. Any violations of the licence will be taken seriously and reported to local authorities. The <a href="https://github.com/josip/stc/blob/master/LICENCE">license file</a> can be found in the Github repository.
           </p>
         </div>
 
