--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           </p>
 
           <h2>&#10123; Create a SCT object</h2>
-          <script src="https://gist.github.com/2105762.js?file=init.js"></script>
+          <!--<script src="https://gist.github.com/2105762.js?file=init.js"></script>-->
 
           <h2>&#10124; Plot the data</h2>
-          <script src="https://gist.github.com/2105762.js?file=plot.js"></script>
+          <!--<script src="https://gist.github.com/2105762.js?file=plot.js"></script>-->
 
           <h2>&#10125; Get your <strike>hands</strike>mind dirty!</h2>
         </aside>
