--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
           </p>
 
           <h2>&#10123; Create a SCT object</h2>
-          <!--<script src="https://gist.github.com/2105762.js?file=init.js"></script>-->
+          <script src="https://gist.github.com/2105762.js?file=init.js"></script>
 
           <h2>&#10124; Plot the data</h2>
-          <!--<script src="https://gist.github.com/2105762.js?file=plot.js"></script>-->
+          <script src="https://gist.github.com/2105762.js?file=plot.js"></script>
 
           <h2>&#10125; Get your <strike>hands</strike>mind dirty!</h2>
+          <h2><a href="http://github.com/josip/stc">&#10126; Fork on Github!</a></h2>
         </aside>
         <div id="realstuff">
           <h2>&#9787; Oh noes, not another one!</h2>
