Added missing fonts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Simple, tiny &amp; cute.js</title>
+    <link rel="stylesheet" type="text/css" href="fonts/roboto/stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="fonts/oswald/stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="stc.css"/>
     <script type="text/javascript" src="stc.min.js"></script>
   </head>
