Added custom scrollbars

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <h2>&#9787; What's with the name?</h2>
           <p>
             <ul>
-              <li>Simple &mdash; STC knows only how to draw simple charts, it has no fancy features like drawing negative values or managing labels on the axes (that's all for you to sort it out!)</li>
-              <li>Tiny &mdash; It's only 4 KB of compressed JavaScript code and 8 KB when uncompressed. You can even easily remove the features you don't need to squeeze the file size even more.</li>
-              <li>Cute &mdash; Just look at the site. Can't you feel it?</li>
+              <li><em>Simple</em> &mdash; STC knows only how to draw simple charts, it has no fancy features like drawing negative values or managing labels on the axes (that's all for you to sort it out!)</li>
+              <li><em>Tiny</em> &mdash; It's only 4 KB of compressed JavaScript code (8 KB of uncompressed code). You can even easily remove features you don't need in order to squeeze the file size even more.</li>
+              <li><em>Cute</em> &mdash; Just look at the site. Can't you feel it?</li>
             </ul>
           </p>
 
